# spear-viewer

./: .gitignore  .vscodeignore  CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: webpack.yml
demo/code/example_program/: CMakeLists.txt  builder.sh  spear.yml
demo/code/gauss-seidel-solver/: Readme.md  builder.sh  main.cpp
demo/code/gauss-seidel-solver/includes/: solver.cpp  solver.h
demo/code/legacy/gauss-seidel-solver/: CMakeLists.txt
demo/code/legacy/openssl-encrypt/: Readme.md  spear.yml
demo/code/legacy/openssl-encrypt/includes/: encryptor.h  keygenerator.cpp  keygenerator.h
demo/code/legacy/openssl-handshake/: README.md
demo/code/legacy/sha256-calculator/: Readme.md  main.cpp
demo/code/openssl-encrypt/: CMakeLists.txt  builder.sh  privkey.pem  pubkey.pem
demo/code/openssl-encrypt/includes/: keygenerator.cpp
demo/code/openssl-handshake/: CMakeLists.txt  README.md  builder.sh  main.cpp
demo/code/openssl-handshake/includes/: httpsClient.h  util.h
demo/code/raytracer/: CMakeLists.txt  README.md  builder.sh  main.cpp
demo/code/sha256-calculator/: CMakeLists.txt  builder.sh  samplefile.txt
demo/code/sha256-calculator/includes/: fileReader.cpp  fileReader.h  sha256.cpp  sha256.h
demo/code/task_1/: CMakeLists.txt  main.cpp
demo/code/task_2/: CMakeLists.txt  main.cpp
demo/code/task_3/: CMakeLists.txt  main.cpp
demo/code/task_4/: CMakeLists.txt  ceasar.cpp  main.cpp
demo/code/weather-data/: CMakeLists.txt  Readme.md  builder.sh
demo/gauss-seidel-solver/: spear.yml
demo/openssl-encrypt/: builder.sh  main.cpp  privkey.pem  pubkey.pem
demo/openssl-encrypt/includes/: encryptor.cpp  encryptor.h  keygenerator.cpp
demo/openssl-handshake/: CMakeLists.txt  main.cpp  spear.yml
demo/openssl-handshake/includes/: httpsClient.cpp  httpsClient.h  util.cpp
demo/raytracer/: CMakeLists.txt
demo/runner/: runner.py
demo/sha256-calculator/: CMakeLists.txt
demo/weather-data/: CMakeLists.txt
src/: extension.ts
src/components/: graphViewer.ts
src/decorations/: energyDecoration.ts  graphDecoration.ts
src/editors/: energyAnalysisEditor.ts  virtualEnergyEditor.ts
src/helper/: colorHelper.ts  configParser.ts  extensionConstants.ts  logger.ts
src/sidebar/: SpearSidebarAnalysisFilesViewer.ts  SpearSidebarCallgraphViewer.ts  SpearSidebarProfileView.ts  SpearSidebarViewProvider.ts
src/sidebar/styles/: sidebar.css
src/statusbar/: StatusbarRunButton.ts
src/subroutines/: analyzeHandler.ts  decorationHandler.ts  generateGraph.ts  profile.ts
src/types/: AnalysisTypes.ts  spearsettings.ts
util/: sample.config.yml
